0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_b_coordinates.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_b_coordinates.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_b_coordinates.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_b_coordinates.py:


NDDataset coordinates example
=============================

In this example, we show how coordinates can be used in SpectroChemPy

.. GENERATED FROM PYTHON SOURCE LINES 16-18

.. code-block:: Python

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 19-21

Uploading a dataset
-------------------

.. GENERATED FROM PYTHON SOURCE LINES 21-23

.. code-block:: Python

    X = scp.read("irdata/CO@Mo_Al2O3.SPG")








.. GENERATED FROM PYTHON SOURCE LINES 24-27

`X` has two coordinates:
* `wavenumbers` named "x"
* and `timestamps` (*i.e.,* the time of recording) named "y".

.. GENERATED FROM PYTHON SOURCE LINES 27-29

.. code-block:: Python

    X.coordset






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>CoordSet: [x:wavenumbers, y:acquisition timestamp (GMT)][CoordSet_3b3cf2b5]</summary><div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 3112</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> wavenumbers</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    4000     3999 ...     1001    999.9] cm⁻¹</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 19</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> acquisition timestamp (GMT)</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[1.477e+09 1.477e+09 ... 1.477e+09 1.477e+09] s</div></div></div>
    <div class="scp-output section"><div class="attr-name">       labels</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='label'>         [[  2016-10-18 13:49:35+00:00   2016-10-18 13:54:06+00:00 ...   2016-10-18 16:01:33+00:00   2016-10-18 16:06:37+00:00]<br/>          [  *Résultat de Soustraction:04_Mo_Al2O3_calc_0.003torr_LT_after sulf_Oct 18 15:46:42 2016 (GMT+02:00)<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_0.004torr_LT_after sulf_Oct 18 15:51:12 2016 (GMT+02:00) ...<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_0.905torr_LT_after sulf_Oct 18 17:58:42 2016 (GMT+02:00)<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_1.004torr_LT_after sulf_Oct 18 18:03:41 2016 (GMT+02:00)]]</div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 30-32

To display them individually use the `x` and `y` attributes of
the dataset `X`:

.. GENERATED FROM PYTHON SOURCE LINES 32-34

.. code-block:: Python

    X.x






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>Coord: [float64] cm⁻¹ (size: 3112)[x]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 3112</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> wavenumbers</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    4000     3999 ...     1001    999.9] cm⁻¹</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 35-36

and `y`:

.. GENERATED FROM PYTHON SOURCE LINES 36-38

.. code-block:: Python

    X.y






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>Coord: [float64] s (size: 19)[y]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 19</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> acquisition timestamp (GMT)</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[1.477e+09 1.477e+09 ... 1.477e+09 1.477e+09] s</div></div></div>
    <div class="scp-output section"><div class="attr-name">       labels</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='label'>         [[  2016-10-18 13:49:35+00:00   2016-10-18 13:54:06+00:00 ...   2016-10-18 16:01:33+00:00   2016-10-18 16:06:37+00:00]<br/>          [  *Résultat de Soustraction:04_Mo_Al2O3_calc_0.003torr_LT_after sulf_Oct 18 15:46:42 2016 (GMT+02:00)<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_0.004torr_LT_after sulf_Oct 18 15:51:12 2016 (GMT+02:00) ...<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_0.905torr_LT_after sulf_Oct 18 17:58:42 2016 (GMT+02:00)<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_1.004torr_LT_after sulf_Oct 18 18:03:41 2016 (GMT+02:00)]]</div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 39-47

Setting new coordinates
-----------------------

In this example, each experiment have a timestamp corresponds to the time
when a given pressure of CO in the infrared cell was set.

Hence, it would be interesting to replace the "useless" timestamps (`y` )
by a pressure coordinates:

.. GENERATED FROM PYTHON SOURCE LINES 47-70

.. code-block:: Python


    pressures = [
        0.00300,
        0.00400,
        0.00900,
        0.01400,
        0.02100,
        0.02600,
        0.03600,
        0.05100,
        0.09300,
        0.15000,
        0.20300,
        0.30000,
        0.40400,
        0.50300,
        0.60200,
        0.70200,
        0.80100,
        0.90500,
        1.00400,
    ]








.. GENERATED FROM PYTHON SOURCE LINES 71-73

1. A first way to do this is to replace the time coordinates by the pressure
   coordinate

.. GENERATED FROM PYTHON SOURCE LINES 75-77

*(we first make a copy of the time coordinates for later use the original will
be destroyed by the following operation)*

.. GENERATED FROM PYTHON SOURCE LINES 77-80

.. code-block:: Python


    c_times = X.y.copy()








.. GENERATED FROM PYTHON SOURCE LINES 81-82

Now we perform the replacement with this new coordinate:

.. GENERATED FROM PYTHON SOURCE LINES 82-87

.. code-block:: Python


    c_pressures = scp.Coord(pressures, title="pressure", units="torr")
    X.y = c_pressures
    X.y






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>Coord: [float64] torr (size: 19)[y]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 19</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> pressure</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[   0.003    0.004 ...    0.905    1.004] torr</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 88-90

2. A second way is to affect several coordinates to the corresponding dimension.
   To do this, the simplest is to affect a list of coordinates instead of a single one:

.. GENERATED FROM PYTHON SOURCE LINES 90-94

.. code-block:: Python


    X.y = [c_times, c_pressures]
    X.y






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>CoordSet: [_1:acquisition timestamp (GMT), _2:pressure][y]</summary><div class="scp-output section"><details><summary>     Dimension `_1`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 19</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> acquisition timestamp (GMT)</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[1.477e+09 1.477e+09 ... 1.477e+09 1.477e+09] s</div></div></div>
    <div class="scp-output section"><div class="attr-name">       labels</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='label'>         [[  2016-10-18 13:49:35+00:00   2016-10-18 13:54:06+00:00 ...   2016-10-18 16:01:33+00:00   2016-10-18 16:06:37+00:00]<br/>          [  *Résultat de Soustraction:04_Mo_Al2O3_calc_0.003torr_LT_after sulf_Oct 18 15:46:42 2016 (GMT+02:00)<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_0.004torr_LT_after sulf_Oct 18 15:51:12 2016 (GMT+02:00) ...<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_0.905torr_LT_after sulf_Oct 18 17:58:42 2016 (GMT+02:00)<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_1.004torr_LT_after sulf_Oct 18 18:03:41 2016 (GMT+02:00)]]</div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `_2`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 19</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> pressure</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[   0.003    0.004 ...    0.905    1.004] torr</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 95-97

By default, the current coordinate is the first one (here `c_times` ).
For example, it will be used for plotting:

.. GENERATED FROM PYTHON SOURCE LINES 97-102

.. code-block:: Python


    prefs = X.preferences
    prefs.figure.figsize = (7, 3)
    X.plot(colorbar=True)
    X.plot_map(colorbar=True)



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_001.png
         :alt: plot b coordinates
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_001.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_002.png
         :alt: plot b coordinates
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_002.png
         :class: sphx-glr-multi-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 103-105

To seamlessly work with the second coordinates (pressures),
we can change the default coordinate:

.. GENERATED FROM PYTHON SOURCE LINES 105-109

.. code-block:: Python


    X.y.select(2)  # to select coordinate `_2`
    X.y.default






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>Coord: [float64] torr (size: 19)[_2]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 19</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> pressure</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[   0.003    0.004 ...    0.905    1.004] torr</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 110-111

Let's now plot the spectral range of interest. The default coordinate is now used:

.. GENERATED FROM PYTHON SOURCE LINES 111-115

.. code-block:: Python

    X_ = X[:, 2250.0:1950.0]
    print(X_.y.default)
    X_.plot()
    X_.plot_map()



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_003.png
         :alt: plot b coordinates
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_004.png
         :alt: plot b coordinates
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_004.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Coord: [float64] torr (size: 19)


.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 116-119

The same can be done for the x coordinates.

Let's take for instance row with index 10 of the previous dataset

.. GENERATED FROM PYTHON SOURCE LINES 119-123

.. code-block:: Python

    row10 = X_[10].squeeze()
    row10.plot()
    row10.coordset




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_005.png
   :alt: plot b coordinates
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_005.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>CoordSet: [x:wavenumbers][CoordSet_3bdc38fe]</summary><div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 312</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> wavenumbers</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    2250     2249 ...     1951     1950] cm⁻¹</div></div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 124-125

Now we wants to add a coordinate with the wavelength instead of wavenumber.

.. GENERATED FROM PYTHON SOURCE LINES 125-133

.. code-block:: Python


    c_wavenumber = row10.x.copy()
    c_wavelength = row10.x.to("nanometer")
    print(c_wavenumber, c_wavelength)
    row10.x = [c_wavenumber, c_wavelength]
    row10.x.select(2)
    row10.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_006.png
   :alt: plot b coordinates
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_b_coordinates_006.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Coord: [float64] cm⁻¹ (size: 312) Coord: [float64] nm (size: 312)


.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 134-136

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 136-138

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.299 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_b_coordinates.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_b_coordinates.ipynb <plot_b_coordinates.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_b_coordinates.py <plot_b_coordinates.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_b_coordinates.zip <plot_b_coordinates.zip>`
